--- a/locales/de-DE.json
+++ b/locales/de-DE.json
@@ -1,450 +1,471 @@
 {
-  "error": {
-    "missingTranslation": "Ein Übersetzungsfehler wird serviert!",
-    "errorOccured": "Ein unbekannter Fehler ist aufgetreten\n```{{error}}```",
-    "unknowCommand": "Dieser Befehl konnte nicht gefunden werden",
-    "invalidOpponent": "Der eingegebene Gegner ist ungültig!"
-  },
-  "discord": {
-    "noDescProvided": "Keine Beschreibung angegeben",
-    "noUseProvided": "Keine Verwendung vorgesehen",
-    "noExampleProvided": "Kein Beispiel angegeben",
-    "global": {
-      "yes": "Jawohl",
-      "no": "Nein",
-      "opponentReady": "<@{{userId}}> bist du bereit für ein {{gameName}}",
-      "opponentNotReady": "{{username}} ist nicht bereit für ein {{gameName}}",
-      "playWithBot": "Du hast keinen Gegner gepackt, willst du gegen mich spielen?",
-      "noPlayWithBot": "{{username}} möchte nicht gegen mich spielen",
-      "notYourGame": "Tut mir leid, aber du bist nicht an der Reihe, um ein Spiel zu starten: /{{gameName}}",
-      "notYourTurn": "Entschuldigung, du bist noch nicht an der Reihe zu spielen",
-      "gameOf": "Teil von :",
-      "whoStart": "{{username}}, wer soll anfangen?",
-      "start": {
-        "you": "Sie ({{username}})",
-        "opponent": "{{username}}",
-        "random": "Willkürlich"
-      },
-      "oppponentNotReady": "Ein Übersetzungsfehler wird serviert!"
-    },
-    "rockpaperscissors": {
-      "mainText": "Es ist Zeit, Entscheidungen zu treffen! (Achtung, danach können Sie nicht mehr ändern)\n\n{{userUsername}} {{userChoice}}\n{{opponentUsername}} {{opponentChoice}}",
-      "sign": {
-        "paper": "Blatt",
-        "rock": "Felsen",
-        "scissors": "Schere"
-      },
-      "result": {
-        "win": "**{{winnerUsername}}** gegen **{{looserUsername}}**\nErgebnis: **{{winnerUsername}}** gewann mit __{{winnerChoice}}__! (**{{looserUsername}}** tat __{{looserChoice}}__)"
-      }
-    },
-    "memory": {
-    },
-    "morpion": {
-      "result": {
-      }
-    },
-    "hangman": {
-      "wordList": [
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null,
-        null
-      ],
-      "error": {
-      },
-      "result": {
-        "win": {
+	"error": {
+		"missingTranslation": "Ein Übersetzungsfehler wird serviert!",
+		"errorOccured": "Ein unbekannter Fehler ist aufgetreten\n```{{error}}```",
+		"unknowCommand": "Dieser Befehl konnte nicht gefunden werden",
+		"invalidOpponent": "Der eingegebene Gegner ist ungültig!"
+	},
+	"discord": {
+		"noDescProvided": "Keine Beschreibung angegeben",
+		"noUseProvided": "Keine Verwendung vorgesehen",
+		"noExampleProvided": "Kein Beispiel angegeben",
+		"global": {
+			"yes": "Jawohl",
+			"no": "Nein",
+			"opponentReady": "<@{{userId}}> bist du bereit für ein {{gameName}}",
+			"opponentNotReady": "{{username}} ist nicht bereit für ein {{gameName}}",
+			"playWithBot": "Du hast keinen Gegner gepackt, willst du gegen mich spielen?",
+			"noPlayWithBot": "{{username}} möchte nicht gegen mich spielen",
+			"notYourGame": "Tut mir leid, aber du bist nicht an der Reihe, um ein Spiel zu starten: /{{gameName}}",
+			"notYourTurn": "Entschuldigung, du bist noch nicht an der Reihe zu spielen",
+			"gameOf": "Teil von :",
+			"whoStart": "{{username}}, wer soll anfangen?",
+			"start": {
+				"you": "Sie ({{username}})",
+				"opponent": "{{username}}",
+				"random": "Willkürlich"
+			},
+			"oppponentNotReady": "Ein Übersetzungsfehler wird serviert!"
+		},
+		"rockpaperscissors": {
+			"mainText": "Es ist Zeit, Entscheidungen zu treffen! (Achtung, danach können Sie nicht mehr ändern)\n\n{{userUsername}} {{userChoice}}\n{{opponentUsername}} {{opponentChoice}}",
+			"sign": {
+				"paper": "Blatt",
+				"rock": "Felsen",
+				"scissors": "Schere"
+			},
+			"result": {
+				"win": "**{{winnerUsername}}** gegen **{{looserUsername}}**\nErgebnis: **{{winnerUsername}}** gewann mit __{{winnerChoice}}__! (**{{looserUsername}}** tat __{{looserChoice}}__)"
+			}
+		},
+		"memory": {},
+		"morpion": {
+			"result": {}
+		},
+		"hangman": {
+			"wordList": [
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null,
+				null
+			],
+			"error": {},
+			"result": {
+				"win": {}
+			}
+		},
+		"puissance4": {
+			"error": {},
+			"win": {},
+			"equality": {},
+			"replay": {}
+		}
+	},
+	"insta": {
+		"eval": {},
+		"puissance4": {
+			"error": {},
+			"result": {}
+		},
+		"help": {}
+	},
+    "dashboard": {
+        "errors": {
+            "mustBeLogin": "Vous devez être connecter pour faire ceci",
+            "serverNotFound": "Le serveur n'a pas été trouvé",
+            "chatNotFound": "Le tchat n'a pas été trouvé",
+            "gameNotFound": "Le jeu n'a pas été trouvé",
+            "notAllowed": "Vous n'êtes pas autoriser a faire ceci",
+            "connectionNotReleased": "La connexion via {{plateform}} n'est pas encore disponible",
+            "invalidKey": "La clé de connexion a expirer ou est invalide",
+            "missingData": "Des données sont manquantes",
+            "accountNotCreated": "Votre compte n'a pas plus être crée",
+            "loginSuccess": "Connecté avec succès",
+            "relogin": "Votre profile n'a pas été trouver (ou a expirer), veuillez vous reconnecter",
+            "logoutSucces": "Deconnecté avec succès",
+            "pageNotFound": "La page n'a pas été trouvé, nous vous avons redirigez ici"
+        },
+        "plateform": {
+            "insta": "Instagram",
+            "discord": "Discord"
+        },
+        "navbar": {
+            "home": "Accueil",
+            "statistics": "Statistiques",
+            "profile": "Profile",
+            "logout": "Déconnexion",
+            "login": "Connexion"
+
+        },
+        "index": {
+            "addBot": "Ajouter le bot sur",
+            "playOn": "Joue sur"
         }
-      }
-    },
-    "puissance4": {
-      "error": {
-      },
-      "win": {
-      },
-      "equality": {
-      },
-      "replay": {
-      }
     }
-  },
-  "insta": {
-    "eval": {
-    },
-    "puissance4": {
-      "error": {
-      },
-      "result": {
-      }
-    },
-    "help": {
-    }
-  }
 }
