--- a/locales/en-GB.json
+++ b/locales/en-GB.json
@@ -589,7 +589,12 @@
       "fr-FR": "French",
       "en-GB": "English",
       "es-ES": "Spanish",
-      "de-DE": "German"
+      "de-DE": "German",
+			"result": {
+				"win": "win",
+				"loose": "loose",
+				"equality": "equality"
+			}
     },
     "server": {
       "infoServer": "Server Info",
