--- a/locales/fr-FR.json
+++ b/locales/fr-FR.json
@@ -598,6 +598,7 @@
 			"noDataSave": "Derniere partie : Aucune données enregistrer",
 			"addDiscordAccount": "Ajouter un compte Discord",
 			"addInstaAccount": "Ajouter un compte Instagram",
+			"switchedLang": "Langue changé avec succès",
 			"fr-FR": "Français",
 			"en-GB": "Anglais",
 			"es-ES": "Espagnol",
